--- a/Planos.html
+++ b/Planos.html
@@ -4,39 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "Tarefa_1.css">
+    <link rel = "stylesheet" href = "reset.css">
     <title>Tarefa 1</title>
 </head>
 <body>
     <header id="header">
-       <h1>Tarefa 1</h1>
-       <ul class="lista_cabecalho">
+       <ul id="lista-inicio">
+            <il><a class="itens" href="Tarefa_1.html">Início</a></il>
             <il><a class="itens" href="Sobre.html">Sobre mim</a></il>
             <il><a class="itens" href="Planos.html">Meus planos</a></il>
-            <il><a class="itens" href="Hobbies.html">Meus hobbies</a></il>
-            <il><a class="itens" href="Hobbies.html">Vídeo</a></il>
+            <il><a class="itens" href="Video.html">Vídeo</a></il>
        </ul>
     </header>
-    <main id="main">
-        <p>
-            A programação é uma habilidade incrível que permite criar e desenvolver aplicações, softwares e sites. É como aprender uma nova linguagem que permite dar vida a ideias e resolver problemas complexos de forma criativa. Na programação, você pode construir desde simples jogos até sistemas complexos de inteligência artificial.
-        </p>
-        <p>
-            A beleza da programação está na sua versatilidade e na capacidade de transformar linhas de código em algo funcional e útil. É como ser um arquiteto digital, construindo estruturas invisíveis que interagem com o mundo real.
-        </p>
-        <p>
-            Além disso, a programação é uma área em constante evolução, com novas tecnologias e linguagens surgindo o tempo todo. Isso torna a jornada na programação emocionante e desafiadora, pois sempre há algo novo para aprender e explorar.
-        </p>
-        <p>
-            Ao aprender a programar, você desenvolve habilidades de resolução de problemas, pensamento lógico e criatividade. Essas habilidades são valiosas não apenas no campo da tecnologia, mas também em diversas outras áreas, pois a programação está presente em quase todos os aspectos da nossa vida moderna.
-        </p>
-        <p>
-            Então, se você está interessado em criar soluções inovadoras, mergulhar em um mundo de possibilidades e desafios estimulantes, a programação pode ser o caminho certo para você. Dê os primeiros passos, mergulhe nesse universo fascinante e descubra a magia de transformar linhas de código em algo incrível.
-        </p>
+    <main id="main-planos">
+        <div class="academia">
+            <img src="imagens\academia.jpg" class="academia-imagem" alt="halteres">
+            <p>Meu planos envolvem no geral desenvolvimento pessoal. Como meu trabalho envolve muito esforço físico, desenvolvi uma lesão na coluna, e não posso fazer exercícios muito pesados, por isso atualmente meus planos atuamente são: resolver esse problema e poder voltar para a academia, que me faz muito bem, e eu admito, é um vício meu!</p>
+        </div>
+        <div class="programacao">
+            <img src="imagens\programacao.jpeg" class="programacao-imagem" alt="academia">
+            <p>Seguindo a linha, tenho planos de me tornar um profissional na área de programação, e sei como deve ser uma tarefa árdua, pois como são várias linguagens e ferramentas disponíveis, é muita coisa para aprender, então acredito que o ideal seja se especializar em uma em específico, claro, sem deixar de aprender algo sobre as outras partes da área. Admito que ainda não me decidi entre Front-end e Back-end, até porque ainda não trabalhei o suficiente com ambas para saber minha preferência.</p>
+        </div>
+        <div class="viagens">
+            <img src="imagens\viagem.jpg" class="viagens-imagem" alt="avião voando">
+            <p>Meus planos na verdade são muito, mas para não me estender, vou finalizar com meus planos de viagem. Por mim eu viajaria o mundo todo, mas acho que seria demais pra mim, então tenho alguns lugares selecionados para ir. Após terminar a faculdade, eu pretendo visitar a Austrália, tanto para praticar mru inglês quanto pra visitar as praias. Depois pretendo fazer um mochilão na Ásia, pois um conhecido que teve essa aventura disse ser inesquecível. Nova Zelândia está na minha lista também, pricipalmente por sua beleza. Já na América do Norte, quero visitar e passar algum tempo naquelas "small towns" pela quietude e paz. E claro, o Canadá, que desde pequeno me cativa a ir morar, não só porque eu gosto de frio, mas por ser uma terra de oportunidades (não muito atualmente), e eu adoraria conhecer.  </p>
+        </div>
     </main>
     <footer>
-        <p>
-            Não soube muito o que por aqui :) 
-        </p>
+        <ul>
+            <a href="https://github.com/locatelli-lucas?tab=repositories"><img src="imagens\github.png" class="git-logo" alt="link do github"></a>
+            <a href="www.linkedin.com/in/locatelli-lucas"><img src="imagens\linkedin.png" class="linkedin-logo" alt="link do linkedin"></a>
+            <a href="https://instagram.com/luscalocatelli?utm_source=qr&igshid=OGU0MmVlOWVjOQ=="><img src="imagens\instagram.png" class="instagram-logo" alt="link do instagram"></a>
+            <a href="https://w.app/WJ79VG"><img src="imagens\whatsapp.png" class="whatsapp-logo" alt="link do whatsapp"></a>
+        </ul>
+        <p class="copyright"> © Copyright Tarefa 1 - 2023</p>
     </footer>
     
 </body>
