--- a/Sobre.html
+++ b/Sobre.html
@@ -4,30 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "Tarefa_1.css">
+    <link rel = "stylesheet" href = "reset.css">
     <title>Tarefa 1</title>
 </head>
 <body>
     <header id="header">
-       <h1>Tarefa 1</h1>
-       <ul class="lista_cabecalho">
+       <ul id="lista-inicio">
+            <il><a class="itens" href="Tarefa_1.html">Início</a></il>
             <il><a class="itens" href="Sobre.html">Sobre mim</a></il>
             <il><a class="itens" href="Planos.html">Meus planos</a></il>
-            <il><a class="itens" href="Hobbies.html">Meus hobbies</a></il>
-            <il><a class="itens" href="Hobbies.html">Vídeo</a></il>
+            <il><a class="itens" href="Video.html">Vídeo</a></il>
        </ul>
     </header>
-    <main id="main">
-        <p>
-            Salve!
-        </p>
-        <p>
-            Me chamo Lucas, tenho 21 anos
-        </p>
+    <main id="main-sobre">
+        <img src="imagens\foto.jpg" class="minha-foto" alt="minha foto">
+        <p>Olá, me chamo Lucas, tenho 21 anos, nascido e criado em São Leopoldo - RS.</p>
+        <p>Sou formado como Técnico em eletrotécnica pela Fundação Liberato e atualmente trabalho como tal na ATOM Brasil, em NH.</p>
+        <p>Este ano vou terminar meu curso de inglês na CNA, no qual sou nível avançado, e em janeiro vou realizar a prova de proficiência de Cambridge, o LanguageSkills, no qual vou usar tudo que aprendi pra provar que sei ingês e tentar tirar um C1. </p>
+        <p>Após ser apresentado ao mundo da programação por um amigo que já estudava e trabalhava na área, comecei meus estudos no Front-end, focando em JS e depois aprendendo HTML e CSS, fazendo um site de pet shop. Como gostei muito da área, iniciei oficialmente meus estudos me matriculando Ciência da computação na Unisinos, onde estou finalizando o 2° semestre e estudei Java e Python. </p>
+        <p>Infelizmente como meu atual trabalho exige que eu viaje muito e fique várias horas extras, no último ano não consegui focar e me desenvolver como programador, até por isso essa página está meio básica, mas estarei me desvinculando em março e procurarei um estágio na área, onde acredito que terei mais tempo para poder aprender.</p>
+        <p>Conheci a 3035Tech através de um conhecido que conhecia a empresa, e desde então, sigo a mesma através das redes sociais, e agora adquiri este curso e espero aprender muito por aqui.</p>
+        
     </main>
     <footer>
-        <p>
-            Não soube muito o que por aqui :) 
-        </p>
+        <ul>
+            <a href="https://github.com/locatelli-lucas?tab=repositories"><img src="imagens\github.png" class="git-logo" alt="link do github"></a>
+            <a href="www.linkedin.com/in/locatelli-lucas"><img src="imagens\linkedin.png" class="linkedin-logo" alt="link do linkedin"></a>
+            <a href="https://instagram.com/luscalocatelli?utm_source=qr&igshid=OGU0MmVlOWVjOQ=="><img src="imagens\instagram.png" class="instagram-logo" alt="link do instagram"></a>
+            <a href="https://w.app/WJ79VG"><img src="imagens\whatsapp.png" class="whatsapp-logo" alt="link do whatsapp"></a>
+        </ul>
+        <p class="copyright"> © Copyright Tarefa 1 - 2023</p>
     </footer>
     
 </body>
