--- a/Video.html
+++ b/Video.html
@@ -14,21 +14,12 @@
             <il><a class="itens" href="Sobre.html">Sobre mim</a></il>
             <il><a class="itens" href="Planos.html">Meus planos</a></il>
             <il><a class="itens" href="Video.html">Vídeo</a></il>
-       </ul>
     </header>
-    <main id="main-inicio">
-        <p>
-            A programação é uma habilidade incrível que permite criar e desenvolver aplicações, softwares e sites. É como aprender uma nova linguagem que permite dar vida a ideias e resolver problemas complexos de forma criativa. Na programação, você pode construir desde simples jogos até sistemas complexos de inteligência artificial.
-        </p>
-        <p>
-            A beleza da programação está na sua versatilidade e na capacidade de transformar linhas de código em algo funcional e útil. É como ser um arquiteto digital, construindo estruturas invisíveis que interagem com o mundo real.
-        </p>
-        <p>
-            Além disso, a programação é uma área em constante evolução, com novas tecnologias e linguagens surgindo o tempo todo. Isso torna a jornada na programação emocionante e desafiadora, pois sempre há algo novo para aprender e explorar.
-        </p>
-        <p>
-            Ao aprender a programar, você desenvolve habilidades de resolução de problemas, pensamento lógico e criatividade. Essas habilidades são valiosas não apenas no campo da tecnologia, mas também em diversas outras áreas, pois a programação está presente em quase todos os aspectos da nossa vida moderna.
-        </p>
+    <main id="main-video">
+        <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/dFrgIrWmTeY?si=xc5q5-kcYxV7bUWW&amp;start=20" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <p>Peguei uma cena aleatória de um filme sensacional!!!</p>
     </main>
     <footer>
         <ul>
