--- a/Planos.html
+++ b/Planos.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href = "Tarefa_1.css">
+    <link rel = "stylesheet" href = "style.css">
     <link rel = "stylesheet" href = "reset.css">
     <title>Tarefa 1</title>
 </head>
 <body>
     <header id="header">
        <ul id="lista-inicio">
-            <il><a class="itens" href="Tarefa_1.html">Início</a></il>
+            <il><a class="itens" href="index.html">Início</a></il>
             <il><a class="itens" href="Sobre.html">Sobre mim</a></il>
             <il><a class="itens" href="Planos.html">Meus planos</a></il>
             <il><a class="itens" href="Video.html">Vídeo</a></il>
